--- a/poly.html
+++ b/poly.html
@@ -10,11 +10,22 @@
             "imports": {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
               "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
-              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js",
+              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
           }
     </script>
     <script src="js/poly.js" type="module" defer></script>
+
+    <style>
+      *{
+          margin: 0;
+          padding: 0;
+      }
+      .bg{
+          width:100%;
+          height: 100vh;
+      }
+    </style>
 </head>
 <body>
     <div class="bg"></div>
