--- a/poly.html
+++ b/poly.html
@@ -14,6 +14,7 @@
             }
           }
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="js/poly.js" type="module" defer></script>
 
     <style>
