--- a/animation2.html
+++ b/animation2.html
@@ -14,7 +14,7 @@
             }
           }
     </script>
-    <script src="js/animation_copy.js" type="module" defer></script>
+    <script src="js/animation2.js" type="module" defer></script>
 
     <style>
         *{
