--- a/create.html
+++ b/create.html
@@ -9,32 +9,25 @@
         {
             "imports": {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-              "GLTFLoader": "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
-              "OrbitControls": "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
+              "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
+              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
           }
     </script>
-    <script src="js/three.js" type="module" defer></script>
+    <script src="js/create.js" type="module" defer></script>
+
     <style>
         *{
             margin: 0;
             padding: 0;
         }
-        .bg{
+        .container{
             width:100vw;
             height: 100vh;
-        }
-        .pages{
-            position: absolute;
-            left: 0;
-            top: 0;
-            color:#fff;
         }
     </style>
 </head>
 <body>
-    <div class="bg">
-    </div>
-    <a class="pages" href="animation.html">다음 페이지</a>
+    <div class="container"></div>
 </body>
 </html>
