--- a/index.html
+++ b/index.html
@@ -4,37 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script type="importmap">
-        {
-            "imports": {
-              "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-              "GLTFLoader": "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
-              "OrbitControls": "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
-            }
-          }
-    </script>
-    <script src="js/three.js" type="module" defer></script>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .bg{
-            width:100vw;
-            height: 100vh;
-        }
-        .pages{
-            position: absolute;
-            left: 0;
-            top: 0;
-            color:#fff;
-        }
-    </style>
+    <title>WebDesignExp</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="bg">
+    <div class="background"></div>
+    <div class="ground">
+        <a href="create.html">01.Create</a>
+        <a href="animation.html">02.Animation</a>
     </div>
-    <a class="pages" href="animation.html">다음 페이지</a>
 </body>
 </html>
