--- a/animation.html
+++ b/animation.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animation</title>
     <script type="importmap">
         {
-            "imports": {
+            "imports" : {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
               "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
-              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js",
-              "Water2":"https://unpkg.com/three@0.143.0/examples/jsm/objects/Water2.js"
+              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
-          }
+        }
     </script>
     <script src="js/animation.js" type="module" defer></script>
 
