--- a/start.html
+++ b/start.html
@@ -4,30 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create</title>
+    <title>Document</title>
     <script type="importmap">
         {
             "imports": {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-              "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
-              "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
+              "GLTFLoader": "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
+              "OrbitControls": "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
           }
     </script>
-    <script src="js/create.js" type="module" defer></script>
-
+    <script src="js/three.js" type="module" defer></script>
     <style>
         *{
             margin: 0;
             padding: 0;
         }
-        .container{
+        .bg{
             width:100vw;
             height: 100vh;
+        }
+        .pages{
+            position: absolute;
+            left: 0;
+            top: 0;
+            color:#fff;
         }
     </style>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="bg">
+    </div>
+    <a class="pages" href="animation.html">다음 페이지</a>
 </body>
 </html>
