--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="background"></div>
     <div class="ground">
-        <a href="create.html">01.Create</a>
-        <a href="animation.html">02.Animation</a>
+        <a href="01-create.html">01.Create</a>
+        <a href="02-animation.html">02.Animation</a>
     </div>
 </body>
 </html>
