--- a/01-create.html
+++ b/01-create.html
@@ -4,46 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animation</title>
+    <title>01</title>
     <script type="importmap">
         {
-            "imports" : {
+            "imports": {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
               "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
               "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
-        }
+          }
     </script>
-    <script src="js/animation.js" type="module" defer></script>
+    <script src="js/01-create.js" type="module" defer></script>
 
     <style>
         *{
             margin: 0;
             padding: 0;
         }
-        .bg{
-            width:100%;
+        .container{
+            width:100vw;
             height: 100vh;
-        }
-        .btns{
-            display: flex;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: 3vh;
-        }
-        .on{
-            padding: 10px;
-            margin: 10px;
-            border-radius: 8px;
-            background-color: rgba(0,0,0,0.5);
-            cursor: pointer;
-            border: 1px solid #000;
         }
     </style>
 </head>
 <body>
-    <div class="bg"></div>
-    <div class="btns"></div>
+    <div class="container"></div>
 </body>
 </html>
