--- a/02-animation.html
+++ b/02-animation.html
@@ -4,30 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create</title>
+    <title>02</title>
     <script type="importmap">
         {
-            "imports": {
+            "imports" : {
               "three": "https://unpkg.com/three@0.143.0/build/three.module.js",
               "GLTFLoader" : "https://unpkg.com/three@0.143.0/examples/jsm/loaders/GLTFLoader.js",
               "OrbitControls" : "https://unpkg.com/three@0.143.0/examples/jsm/controls/OrbitControls.js"
             }
-          }
+        }
     </script>
-    <script src="js/create.js" type="module" defer></script>
+    <script src="js/02-animation.js" type="module" defer></script>
 
     <style>
         *{
             margin: 0;
             padding: 0;
         }
-        .container{
-            width:100vw;
+        .bg{
+            width:100%;
             height: 100vh;
+        }
+        .btns{
+            display: flex;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 3vh;
+        }
+        .on{
+            padding: 10px;
+            margin: 10px;
+            border-radius: 8px;
+            background-color: rgba(0,0,0,0.5);
+            cursor: pointer;
+            border: 1px solid #000;
         }
     </style>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="bg"></div>
+    <div class="btns"></div>
 </body>
 </html>
